// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`COMPONENT: Carousel > should display a message when there are no slides 1`] = `
<DocumentFragment>
  <div
    class="relative h-full overflow-hidden"
    data-testid="carousel"
  >
    <div
      class="flex h-full touch-pan-y"
      style="backface-visibility: hidden;"
    >
      <div
        class="flex items-center justify-center w-full h-full"
      >
        <div
          class="text-[#ccc]"
        >
          No images to display
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`COMPONENT: Carousel > should render the carousel component 1`] = `
<DocumentFragment>
  <div
    class="relative h-full overflow-hidden"
    data-testid="carousel"
  >
    <div
      class="flex h-full touch-pan-y"
      style="backface-visibility: hidden;"
    >
      <div
        class="flex flex-[0_0_100%] justify-center max-w-full"
        data-index="1"
        data-testid="slide"
      >
        <div
          class="relative flex flex-col justify-center object-contain max-w-[100vw] max-h-[100vh] overflow-hidden"
          style="aspect-ratio: 1/1;"
        >
          <img
            alt="Your alt text"
            class="object-contain cursor-pointer"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://example.com/image"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="flex flex-[0_0_100%] justify-center max-w-full"
        data-index="2"
        data-testid="slide"
      >
        <div
          class="relative flex flex-col justify-center object-contain max-w-[100vw] max-h-[100vh] overflow-hidden"
          style="aspect-ratio: 1/1;"
        >
          <img
            alt="Your alt text"
            class="object-contain cursor-pointer"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://example.com/image"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="flex flex-[0_0_100%] justify-center max-w-full"
        data-index="3"
        data-testid="slide"
      >
        <div
          class="relative flex flex-col justify-center object-contain max-w-[100vw] max-h-[100vh] overflow-hidden"
          style="aspect-ratio: 1/1;"
        >
          <img
            alt="Your alt text"
            class="object-contain cursor-pointer"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://example.com/image"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
